--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
   </head>
   <body>
 
-
     <div class="site-mobile-menu site-navbar-target">
         <div class="site-mobile-menu-header">
           <div class="site-mobile-menu-close mt-3">
@@ -35,9 +34,8 @@
         <div class="site-mobile-menu-body"></div>
       </div>
 
-
-
       <header class="site-navbar site-navbar-target bg-white" role="banner">
+
         <div class="container">
           <div class="row align-items-center position-relative">
             <div class="col-lg-12 text-center">
@@ -48,13 +46,14 @@
             </div>
           </div>
         </div>
+
       </header>
       
-      <div class="site-navbar site-navbar-target bg-white text-center" role="banner">
-      <div class="container text">
+      <div class="site-navbar site-navbar-target bg-white" role="banner">
+        <div class="container">
           <div class="row align-items-center position-relative">
-            <div class="col-lg-12">
-              <nav class="site-navigation text-iconght ml-auto " role="navigation">
+            <div class="col-lg-9">
+              <nav class="site-navigation text-right ml-auto " role="navigation">
                 <ul class="site-menu main-menu js-clone-nav ml-auto d-none d-lg-block">
                   <li class="active"><a href="index.html" class="nav-link">Home</a></li>
                   <li><a href="about.html" class="nav-link">About Us</a></li>
@@ -67,7 +66,7 @@
             </div>
           </div>
         </div>
-        </div>
+      </div>
 
     <!-- <div class="hero" style="background-image: url('images/hero_1 spajpg');"></div> -->
   
@@ -123,8 +122,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title text-center">
-          <h2>Meet Team Taxculators</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Team Taxculators</h2><br>
+          <!--<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>-->
         </div>
 
         <div class="row">
@@ -134,31 +133,19 @@
               <div class="pic"><img src="images/team-1.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Nagendra Vishwakarma</h4>
-                <span>Chief Executive Officer</span>
-                <p>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
-                <div class="social">
-                  <a href=""><i class="icon-twitter"></i></a>
-                  <a href=""><i class="icon-facebook"></i></a>
-                  <a href=""><i class="icon-instagram"></i></a>
-                  <a href=""> <i class="icon-linkedin"></i> </a>
-                </div>
+                <span>Founder</span>
+                <p>Indirect Tax Head</p>
               </div>
             </div>
           </div>
 
           <div class="col-lg-6 mt-4 mt-lg-0">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
-              <div class="pic"><img src="images/team-2.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="images/team-3.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Shashi Vishwakarma</h4>
-                <span>Product Manager</span>
-                <p>Aut maiores voluptates amet et quis praesentium qui senda para</p>
-                <div class="social">
-                  <a href=""><i class="icon-twitter"></i></a>
-                  <a href=""><i class="icon-facebook"></i></a>
-                  <a href=""><i class="icon-instagram"></i></a>
-                  <a href=""> <i class="icon-linkedin"></i> </a>
-                </div>
+                <h4>Ashutosh Singh</h4>
+                <span>LLB</span>
+                <p>Legal Head</p>
               </div>
             </div>
           </div>
@@ -167,32 +154,20 @@
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic"><img src="images/team-3.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Arjun vishwakarma</h4>
-                <span>CTO</span>
-                <p>Quisquam facilis cum velit laborum corrupti fuga rerum quia</p>
-                <div class="social">
-                  <a href=""><i class="icon-twitter"></i></a>
-                  <a href=""><i class="icon-facebook"></i></a>
-                  <a href=""><i class="icon-instagram"></i></a>
-                  <a href=""> <i class="icon-linkedin"></i> </a>
-                </div>
+                <h4>Arjun Vishwakarma</h4>
+                <span>Chartered Accountant</span>
+                <p>Direct Tax Head</p>
               </div>
             </div>
           </div>
 
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="images/team-1.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="images/team-2.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Ashutosh Singh</h4>
-                <span>Accountant</span>
-                <p>Dolorum tempora officiis odit laborum officiis et et accusamus</p>
-                <div class="social">
-                  <a href=""><i class="icon-twitter"></i></a>
-                  <a href=""><i class="icon-facebook"></i></a>
-                  <a href=""><i class="icon-instagram"></i></a>
-                  <a href=""> <i class="icon-linkedin"></i> </a>
-                </div>
+                <h4>Shashi Vishwakarma</h4>
+                <span>Company Secretary</span>
+                <p>ROC Head</p>
               </div>
             </div>
           </div>
@@ -207,10 +182,10 @@
         <div class="container">
           <div class="service-details">
             <div class="section-header text-center">
-              <h2>Our services</h2>
-              <p>
+              <h2>Product & Sevices</h2>
+              <!--<p>
                 Pallamco laboicons nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehendeicont in voluptate velit esse cillum dolore eu fugiat nulla paiconatur. 
-              </p>
+              </p>-->
             </div><!--/.section-header-->
             <div class="service-content-one">
               <div class="row">
@@ -221,11 +196,8 @@
                     </div><!--/.service-img-->
                     <div class="service-txt">
                       <h2>
-                        <a href="#">busisness planning</a>
+                        <a href="#">Income Tax</a>
                       </h2>
-                      <p>
-                        Lorem ipsum dolo dolor in  in voluptate velit esse cillum dolore. epteur sint oat cupidatat 
-                      </p>
                       <a href="#" class="service-btn">
                         learn more
                       </a>
@@ -239,11 +211,8 @@
                     </div><!--/.service-img-->
                     <div class="service-txt">
                       <h2>
-                        <a href="#">busisness consultency</a>
+                        <a href="#">GST</a>
                       </h2>
-                      <p>
-                        Lorem ipsum dolo dolor in  in voluptate velit esse cillum dolore. epteur sint oat cupidatat 
-                      </p>
                       <a href="#" class="service-btn">
                         learn more
                       </a>
@@ -257,11 +226,8 @@
                     </div><!--/.service-img-->
                     <div class="service-txt">
                       <h2>
-                        <a href="#">financial services</a>
+                        <a href="#">Legal Consulting</a>
                       </h2>
-                      <p>
-                        Lorem ipsum dolo dolor in  in voluptate velit esse cillum dolore. epteur sint oat cupidatat 
-                      </p>
                       <a href="#" class="service-btn">
                         learn more
                       </a>
@@ -279,11 +245,8 @@
                     </div><!--/.service-img-->
                     <div class="service-txt">
                       <h2>
-                        <a href="#">iconsk management</a>
+                        <a href="#">MCA Services</a>
                       </h2>
-                      <p>
-                        Lorem ipsum dolo dolor in  in voluptate velit esse cillum dolore. epteur sint oat cupidatat 
-                      </p>
                       <a href="#" class="service-btn">
                         learn more
                       </a>
@@ -297,11 +260,8 @@
                     </div><!--/.service-img-->
                     <div class="service-txt">
                       <h2>
-                        <a href="#">expert advisers</a>
+                        <a href="#">Expert Advisers</a>
                       </h2>
-                      <p>
-                        Lorem ipsum dolo dolor in  in voluptate velit esse cillum dolore. epteur sint oat cupidatat 
-                      </p>
                       <a href="#" class="service-btn">
                         learn more
                       </a>
@@ -315,11 +275,8 @@
                     </div><!--/.service-img-->
                     <div class="service-txt">
                       <h2>
-                        <a href="#">24/7 customer support</a>
+                        <a href="#">Customer Support Services</a>
                       </h2>
-                      <p>
-                        Lorem ipsum dolo dolor in  in voluptate velit esse cillum dolore. epteur sint oat cupidatat 
-                      </p>
                       <a href="#" class="service-btn">
                         learn more
                       </a>
@@ -355,20 +312,20 @@
 
               <div class="address">
                 <i class="icon-map-marker"></i>
-                <h4>London</h4>
+                <h4>UK:</h4>
                 <p>31 Streatfield Road, Harrow, London, HA3 9BP</p>
               </div>
 
               <div class="email">
                 <i class="icon-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>Taxculators@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="icon-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+91 93263 86681</p>
               </div>
 
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3768.504448875367!2d72.83933221473121!3d19.173157287032243!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b657e056657b%3A0x4d8d97c24813b626!2sRustomjee%20Ozone!5e0!3m2!1sen!2sin!4v1645088358929!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
@@ -389,19 +346,15 @@
                 </div>
               </div>
               <div class="form-group">
-                <label for="name">Subject</label>
+                <label for="name">Mobile Number</label>
                 <input type="text" class="form-control" name="subject" id="subject" required>
-              </div>
-              <div class="form-group">
-                <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="10" required></textarea>
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit">Connect With Us</button></div>
             </form>
           </div>
 
@@ -479,7 +432,7 @@
             <p>
               T1/903, Rustomjee Ozone <br>
               Near Inorbit Mall, GMLR,<br>
-              Goregaon West, Mumbai - 400102 <br><br>
+              Goregaon (W), Mumbai - 400102 <br><br>
               <strong>Phone:</strong> +1 5589 55488 55<br>
               <strong>Email:</strong> info@example.com<br>
             </p>
@@ -525,11 +478,11 @@
   </footer><!-- End Footer -->
 
     <!-- Copyiconght -->
-        <div class="footer-copyiconght text-center py-3"><strong>© 2022 All Rights Reserved: Made with <i class="icon-heart" style="color: red;"></i>
+        <div class="footer-copyiconght text-center py-3"><strong>© 2022 All Rights Reserved with
           <a href="https://ankitvish78.github.io/Ankit-Vish/"><span class="web-dev">Ankit Vish</span></strong></a>
         </div>
 
-        <div id="preloader"></div>
+        
         <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="icon-arrow-up"></i></a>
 
     <sciconpt src="js/jquery-3.3.1.min.js"></sciconpt>
