--- a/about.html
+++ b/about.html
@@ -25,7 +25,6 @@
   </head>
   <body>
 
-
     <div class="site-mobile-menu site-navbar-target">
         <div class="site-mobile-menu-header">
           <div class="site-mobile-menu-close mt-3">
@@ -53,7 +52,7 @@
       </header>
       
       <div class="site-navbar site-navbar-target bg-white" role="banner">
-      <div class="container">
+        <div class="container">
           <div class="row align-items-center position-relative">
             <div class="col-lg-9">
               <nav class="site-navigation text-right ml-auto " role="navigation">
@@ -69,7 +68,7 @@
             </div>
           </div>
         </div>
-        </div>
+      </div>
 
     <!-- <div class="hero" style="background-image: url('images/hero_1 spajpg');"></div> -->
 
@@ -174,8 +173,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title text-center">
-          <h2>Meet Team Taxculators</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Team Taxculators</h2><br>
+          <!--<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>-->
         </div>
 
         <div class="row">
@@ -185,31 +184,19 @@
               <div class="pic"><img src="images/team-1.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Nagendra Vishwakarma</h4>
-                <span>Chief Executive Officer</span>
-                <p>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
-                <div class="social">
-                  <a href=""><i class="icon-twitter"></i></a>
-                  <a href=""><i class="icon-facebook"></i></a>
-                  <a href=""><i class="icon-instagram"></i></a>
-                  <a href=""> <i class="icon-linkedin"></i> </a>
-                </div>
+                <span>Founder</span>
+                <p>Indirect Tax Head</p>
               </div>
             </div>
           </div>
 
           <div class="col-lg-6 mt-4 mt-lg-0">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
-              <div class="pic"><img src="images/team-2.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="images/team-3.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Shashi Vishwakarma</h4>
-                <span>Product Manager</span>
-                <p>Aut maiores voluptates amet et quis praesentium qui senda para</p>
-                <div class="social">
-                  <a href=""><i class="icon-twitter"></i></a>
-                  <a href=""><i class="icon-facebook"></i></a>
-                  <a href=""><i class="icon-instagram"></i></a>
-                  <a href=""> <i class="icon-linkedin"></i> </a>
-                </div>
+                <h4>Ashutosh Singh</h4>
+                <span>LLB</span>
+                <p>Legal Head</p>
               </div>
             </div>
           </div>
@@ -218,32 +205,20 @@
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic"><img src="images/team-3.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Arjun vishwakarma</h4>
-                <span>CTO</span>
-                <p>Quisquam facilis cum velit laborum corrupti fuga rerum quia</p>
-                <div class="social">
-                  <a href=""><i class="icon-twitter"></i></a>
-                  <a href=""><i class="icon-facebook"></i></a>
-                  <a href=""><i class="icon-instagram"></i></a>
-                  <a href=""> <i class="icon-linkedin"></i> </a>
-                </div>
+                <h4>Arjun Vishwakarma</h4>
+                <span>Chartered Accountant</span>
+                <p>Direct Tax Head</p>
               </div>
             </div>
           </div>
 
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="images/team-4.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="images/team-2.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Ashutosh Singh</h4>
-                <span>Accountant</span>
-                <p>Dolorum tempora officiis odit laborum officiis et et accusamus</p>
-                <div class="social">
-                  <a href=""><i class="icon-twitter"></i></a>
-                  <a href=""><i class="icon-facebook"></i></a>
-                  <a href=""><i class="icon-instagram"></i></a>
-                  <a href=""> <i class="icon-linkedin"></i> </a>
-                </div>
+                <h4>Shashi Vishwakarma</h4>
+                <span>Company Secretary</span>
+                <p>ROC Head</p>
               </div>
             </div>
           </div>
@@ -252,7 +227,6 @@
 
       </div>
     </section> <!-- End Team Section -->
-    <!-- About section end-->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -451,7 +425,7 @@
           <a href="https://ankitvish78.github.io/Ankit-Vish/"><span class="web-dev">Ankit Vish</span></strong></a>
         </div>
 
-        <div id="preloader"></div>
+        
         <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="icon-arrow-up"></i></a>
 
     <script src="js/jquery-3.3.1.min.js"></script>
